--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.86MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.84MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-855.3KB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 116.129.254.192, port: 16260, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-328.7KB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: 120.241.236.215, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-573.4KB/s(Youtube:不良林), server: 120.233.29.168, port: 16248, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.55MB/s(Youtube:不良林), server: 120.241.236.216, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-159.3KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
