--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-855.3KB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 116.129.254.192, port: 16260, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-328.7KB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: 120.241.236.215, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-573.4KB/s(Youtube:不良林), server: 120.233.29.168, port: 16248, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-169.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-854.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 116.129.254.192, port: 16298, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-354.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16296, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-530.7KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-159.3KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-855.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
