--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-169.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-854.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 116.129.254.192, port: 16298, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-354.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16296, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-530.7KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: 120.233.150.132, port: 16298, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-449.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: 116.129.254.192, port: 16284, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-159.3KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-162.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-169.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
