--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: 120.233.150.132, port: 16298, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-449.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: 116.129.254.192, port: 16284, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-159.3KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-964.8KB/s(Youtube:不良林), server: 120.241.236.218, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-255.7KB/s(Youtube:不良林), server: 120.233.150.132, port: 16133, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-799.5KB/s(Youtube:不良林), server: 120.241.236.216, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-530.7KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-714.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-346.0KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-162.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
