--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-964.8KB/s(Youtube:不良林), server: 120.241.236.218, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-255.7KB/s(Youtube:不良林), server: 120.233.150.132, port: 16133, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-799.5KB/s(Youtube:不良林), server: 120.241.236.216, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-579.0KB/s(Youtube:不良林), server: 120.241.236.218, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-226.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇳 中国-530.7KB/s(Youtube:不良林), server: 120.241.236.216, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-378.9KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-714.8KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-346.0KB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-162.4KB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-917.5KB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-964.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-255.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-226.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-530.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-714.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-346.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-162.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-917.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
